@@ -353,7 +353,7 @@ enum {
 	SI_BLEEDING		= 124,
 	SI_JOINTBEAT		= 125,
 	SI_BABY			= 130,
-	SI_STEELBODY		= 132,
+	SI_AUTOBERSERK	= 132,
 	SI_RUN			= 133,
 	SI_BUMP			= 134,
 	SI_READYSTORM		= 135,
